--- a/TodoList/src/index.html
+++ b/TodoList/src/index.html
@@ -6,7 +6,7 @@
     <title>My Todo App</title>
     <link href="./styles/output.css" rel="stylesheet" />
   </head>
-  <body class="sm:px-10 md:px-16 lg:px-20 xl:px-32 px-5 pt-10">
+  <body class="sm:px-10 md:px-16 lg:px-20 xl:px-32 px-5 py-10">
     <h1 class="text-center text-3xl sm:text-4xl font-bold">
       My Todo Categories
     </h1>
