--- a/Todo App/frontend/src/index.html
+++ b/Todo App/frontend/src/index.html
@@ -11,7 +11,7 @@
     <!-- Logout -->
     <a
       id="logout_btn"
-      class="text-violet-700 bg-violet-400 px-4 py-2 absolute rounded-lg top-2 right-2 cursor-pointer"
+      class="text-violet-700 bg-violet-400 px-4 py-2 absolute rounded-lg top-2 right-2 cursor-pointer hidden"
       >Logout</a
     >
 
@@ -49,7 +49,7 @@
 
           <button
             type="submit"
-            class="bg-violet-700 text-white font-bold text-xl py-2 rounded-lg"
+            class="bg-violet-700 text-white font-bold text-xl py-2 rounded-lg cursor-pointer"
             id="signup_btn"
           >
             Sign up
@@ -91,7 +91,7 @@
 
           <button
             type="submit"
-            class="bg-violet-700 text-white font-bold text-xl py-2 rounded-lg"
+            class="bg-violet-700 text-white font-bold text-xl py-2 rounded-lg cursor-pointer"
             id="login_btn"
           >
             Login
